# Homework_27.2

./: Dockerfile  README.md  db.sqlite3  functions.py  manage.py  pyproject.toml
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py
data/: ads.json
homework_27_2/: asgi.py  settings.py  urls.py  wsgi.py
